# script-to-storyboard

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: demo_script.md
script2storyboard/: __init__.py  config.py  errors.py
script2storyboard/cli/: main.py
script2storyboard/client/: ark_text.py
script2storyboard/storyboard/: __init__.py  chunker.py  prompt.py  validator.py
scripts/: setup.sh
skills/script-to-storyboard/: SKILL.md
skills/script-to-storyboard/agents/: openai.yaml
tests/: test_ark_text.py  test_chunker.py  test_cli.py  test_config.py  test_prompt.py  test_validator.py
tests/fixtures/: good_storyboard.md
