[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "script2storyboard"
version = "0.1.0"
description = "CLI for converting Chinese scripts into 15-second clip storyboards with Volcengine Ark."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
script2storyboard = "script2storyboard.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
